Fixed the header and footer and the links there

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="./favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/626f3a66a5.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -15,8 +16,8 @@
     <header>
       <nav><!-- Logo and navbar -->
         <ul>
-          <li class="li-link"><a href=" ">Link to ?</a></li>
           <li class="logo"><img src="./logo.svg"></li>
+          <li class="li-link"><a href=" ">Link to something ?</a></li>
           <li class="nailtech-news">Nailtech News</li>
           <li class="booking"><a href="http://www.bokadirekt.se">Book a nailtech</a></li>
           <li class="education"><a href="https://lillynails.se/proffs-utbildningar">Become a nailtech</a></li>
@@ -113,9 +114,12 @@
 </main>
   
   <footer>
-    <span>This site is made by a student of the Technigo front-end developer bootcamp. </span>
-    <span></span>
-    <span>Most photos on this page are from <a href="https://www.instagram.com/nailsbylillan/">Nails by Lillan</a>, but two are from <a href="http://www.pexels.com">Pexels.</a></span>
+    <span>This site is made by <a href="https://www.linkedin.com/in/lillemor-eriksson-0604101aa">
+      <i class="fab fa-linkedin"></i>Lillemor Eriksson,</a> student of the Technigo front-end developer bootcamp. </span>
+   <span>Check out Lillemors portfolio on <a href="https://github.com/LillanEriksson?tab=repositories">
+    <i class="fab fa-github"></i>Github.</span></a>
+    <span>Most photos on this page are from <a href="https://www.instagram.com/nailsbylillan/">
+      <i class="fab fa-instagram-square"></i>Nails by Lillan</a>, but two are from <a href="http://www.pexels.com">Pexels.</a></span>
     
   </body>
 </html>
