--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,13 @@
       <div></div>
       <div></div>
     </div>
-    <img src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
-    <!-- <img src="header-image.jpg" alt="The New Yorker logo"> -->
+    <img class="header-image" src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
     <nav>
-      <a href="">Newsletter</a>
-      <a href="">Sign in</a>
-      <a href="">Shop</a>
+      <a href="#">Books & Culture</a>
+      <a href="#">Crossword</a>
+      <a href="#"><img class="nav-image" src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" /></a> <!--odstrani, ce ne deluje-->
+      <a href="#">Goings On</a>
+      <a href="#">Fiction & Poetry</a>
     </nav>
     <!-- Some kind of logo and navbar (in the header)-->
   </header>
