--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Feminist Journal</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+ 
 </head>
 
 <body>
@@ -24,6 +24,7 @@
       <a class="linkright" href="#">Join us</a>
     </div>
   </nav>
+
   <!--header-->
 
   <header>
@@ -59,15 +60,9 @@
 
       </div>
     </div>
-
-
-
-
-
-
-
-
   </section>
+
+
   <!--small news, columns with hover effect-->
 
   <section class="small">
@@ -126,19 +121,10 @@
       <img class="small-img" src="./img/business.jpg" alt="">
       <a href="#"></a>
     </div>
-
-
-
   </section>
 
 
-
-
-
-
-
-
-  <!-- imgs-->
+  <!-- bottom imgs-->
 
   <div class="images-container">
     <div class="images">
@@ -150,22 +136,19 @@
     </div>
   </div>
 
-<div class="button">
-  <button>Donate</button>
-</div>  
+  <!--button-->
 
+  <div class="button">
+    <button>Donate</button>
+  </div>
 
   <!--footer-->
-  <!--LOOK OVER LOGO PLACEMENT, add button if time-->
+
   <footer>
     <div class="footer">
       <img class="logo" src="./img/logo.svg">
-     
-      </a>
     </div>
   </footer>
-
-
 
 
 </body>
