large news link changed

--- a/code/index.html
+++ b/code/index.html
@@ -55,8 +55,9 @@
           ipsumvvlorem ipsumlorem ipsumlorem ipsumvvlorem ipsumvlorem ipsumlorem ipsumlorem ipsumv
           lorem ipsumlorem ipsumvlorem ipsumvlorem ipsumlorem ipsumvvvlorem ipsumvlorem ipsum
           vvvlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumvvlorem ipsumvvlorem ipsumvlorem ipsum
-          lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumvlorem ipsumvlorem ipsum....
-          <a href="https://www.svd.se/kvinnor-har-inte-rad-att-skilja-sig-i-stockholm">Read more</a></p>
+          lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumvlorem ipsumvlorem ipsumipsumv
+          lorem ipsumvlorem ipsum....
+          <a href="#">Read more</a></p>
 
       </div>
     </div>
