Updated Mobile CSS and HTML (hovering and class names). Started tablet querie

--- a/code/index.html
+++ b/code/index.html
@@ -25,10 +25,10 @@
       </nav>
     </header>
  <!-- The big news content -->
-    <section class="big-news-main">
+    <section class="big-news">
       <div class ="big-news-image">
         <img class = "image-big" src="./images/horse.PNG" alt="iclandic horse">
-        <p class="description">You could be ridning horses every damn day</p>
+        <p class="image-big-text">You could be ridning horses every damn day</p>
       </div>
       <div class ="big-news-news">
         <h2> FIND THE COOLEST SPOTS ON ICELAND</h2>
@@ -39,40 +39,38 @@
     </section>
 
     <!-- The other news  -->
-    <section class="other-news-main">
+    <section class="other-news">
 
-      <div class="other-news1 pic-effect">
+      <div class="other-news1 hoover">
         <div class="pic-frame">
           <img class="image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
-          <div class="pic-effect-title">SELJALANDSFOSS</div>
+          <div class="hoover-title">LOCATION</div>
         </div>
         <div class="description">What you need to know about the waterfalls</div>
       </div>
 
-      <div class="other-news1 pic-effect">
+      <div class="other-news1 hoover">
         <div class="pic-frame">
-          <img class="image-news1" src="./images/lighthouse.png" alt="iclandic lighthouse">
-          <div class="pic-effect-title">BLACK SAND BEACH</div>
+          <img class="image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
+          <div class="hoover-title">LOCATION</div>
         </div>
-        <div class="description">Solitued with a view</div>
+        <div class="description">What you need to know about the waterfalls</div>
       </div>
 
-      <div class="other-news2 pic-effect">
-        <div class="pic-frame">
-          <img class="image-news1" src="./images/purple_fields.png" alt="iclandic lighthouse">
-          <div class="pic-effect-title">EVERYWHERE</div>
-        </div>
-        <div class="description">Experience a purple gladiator moment</div>
+      <div class ="other-news2 hoover">
+        <img class = "image-news2" src="./images/lighthouse.png" alt="iclandic lighthouse">
+        <p class = "image-small-text">Solitued with a view</p>
       </div>
 
-      <div class="other-news1 pic-effect">
-        <div class="pic-frame">
-          <img class="image-news1" src="./images/glacier.png" alt="iclandic glacier">
-          <div class="pic-effect-title"> JÖKULSÁRLÓN GLACIER LAGOON</div>
-        </div>
-        <div class="description">How to take the best pictures</div>
+      <div class ="other-news3 hoover">
+        <img class = "image-news3" src="./images/purple_fields.png" alt="iclandic landscape">
+        <p class = "image-small-text"> Experience a purple gladiator moment</p>
       </div>
 
+      <div class ="other-news4 hoover">
+        <img class = "image-news4" src="./images/glacier.png" alt="iclandic glacier">
+        <p class = "image-small-text">How to take the best pictures</p>
+      </div>
     </section>
 
     <footer>
