--- a/code/index.html
+++ b/code/index.html
@@ -40,8 +40,10 @@
     </div>
   </section>
   <section class="card-container">
-    <h3>ARTICLES</h3>
-    <p>Get inspired</p>
+    <div class="headline-text">
+      <h3>ARTICLES</h3>
+      <p>Get inspired</p>
+    </div>
     <section class="cards">
       <a href="#">
         <img class="card-image" src="./images/bowl.jpg" alt="image of a acai bowl">
