--- a/code/index.html
+++ b/code/index.html
@@ -9,8 +9,7 @@
 
   <body>
 
-    <header>
-      <!-- Logo and navbar -->
+    <header> <!-- Logo and navbar -->
       <img class="logo" src="./logo2.png">
       <div class="topnav">
         <a href="#">Latest</a>
@@ -18,21 +17,21 @@
         <a href="#">Contact</a>
         <a href="#"><b>Subscribe</b></a>
         <a href="https://www.linkedin.com/in/gabriella-bolin-b718544a/">
-          <img src="linkedin80.png" alt="LinkedIn logo link"></a>       
+        <img src="linkedin80.png" alt="LinkedIn logo link"></a>       
       </div>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
       <a href="#">
-      <h2>LATEST TREND</h2>
-      <h6>Posted: August 26th, 2020</h6>
-      <h4>This is an important text about a new trend. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <h2>LATEST TREND</h2>
+        <h6>Posted: August 26th, 2020</h6>
+        <h4>This is an important text about a new trend. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      </h4>
-       <div class="box spc">
-       <img class="img1" src="https://images.unsplash.com/photo-1597947216176-73eeb189ea51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Bild på beige vas med vassstrå i.">
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        </h4>
+        <div class="box spc">
+          <img class="img1" src="https://images.unsplash.com/photo-1597947216176-73eeb189ea51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Bild på beige vas med vassstrå i.">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
         do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco 
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
@@ -80,7 +79,7 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est 
         laborum. xcepteur sint occaecat cupidatat non 
         proident, sunt in culpa qui officia deserunt mollit anim id est 
-        laborum.</p>
+          laborum.</p>
         </div>
      </a>
     </section>
@@ -88,42 +87,42 @@
     <section class="grid-container">
       <!-- The other news  -->
       <div class="grid-child one">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 25th, 2020</h6>
-        <img class="img-small" src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
-        alt="Picture with ballons and a pink chair">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 25th, 2020</h6>
+          <img class="img-small" src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+          alt="Picture with ballons and a pink chair">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. 
-        </p>
-      </a>
+          </p>
+        </a>
       </div>
       <div class="grid-child two">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 25th, 2020</h6>
-        <img class="img-small" src="https://images.unsplash.com/photo-1597218859878-0e6cad008639?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
-        alt="Picture with wood burning stove etc.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 25th, 2020</h6>
+          <img class="img-small" src="https://images.unsplash.com/photo-1597218859878-0e6cad008639?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
+          alt="Picture with wood burning stove etc.">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
-        </p>
-      </a>
+          </p>
+        </a>
       </div>
       <div class="grid-child three">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 26th, 2020</h6>
-        <img class="img-small" src="https://images.unsplash.com/photo-1551029118-d3c293a67c0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-        alt="Picture of a plant etc.">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 26th, 2020</h6>
+          <img class="img-small" src="https://images.unsplash.com/photo-1551029118-d3c293a67c0e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          alt="Picture of a plant etc.">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
@@ -132,16 +131,16 @@
           eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
           proident, sunt in culpa qui officia deserunt mollit anim id est 
           laborum. 
-        </p>
-      </a>
+          </p>
+        </a>
       </div>
       <div class="grid-child four">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 24th, 2020</h6>
-        <img class="img-small" src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-        alt="Picture of a plant">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 24th, 2020</h6>
+          <img class="img-small" src="https://images.unsplash.com/photo-1453904300235-0f2f60b15b5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          alt="Picture of a plant">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
@@ -150,68 +149,68 @@
           laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
           dolor in reprehenderit in voluptate velit esse cillum dolore 
           eu fugiat nulla pariatur.
-        </p>
-      </a>
+          </p>
+        </a>
       </div>
       <div class="grid-child five">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 24th, 2020</h6>
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 24th, 2020</h6>
           <div class="box">
-          <img class="img-smaller" src="https://images.unsplash.com/photo-1582732896686-e0b8c500faa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          alt="Picture of a lamp">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            <img class="img-smaller" src="https://images.unsplash.com/photo-1582732896686-e0b8c500faa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="Picture of a lamp">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat.  </p>
+            laboris nisi ut aliquip ex ea commodo consequat.  </p>
           </div>
-      </a>
+        </a>
       </div>
       <div class="grid-child six">
-      <a href="#">
-        <h3>NEWS</h3>
-        <h6>Posted: August 24th, 2020</h6>
+        <a href="#">
+          <h3>NEWS</h3>
+          <h6>Posted: August 24th, 2020</h6>
           <div class="box">
-          <img class="img-smaller" src="https://images.unsplash.com/photo-1553797794-4c4d2c55dbfb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          alt="Picture of a lamp">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            <img class="img-smaller" src="https://images.unsplash.com/photo-1553797794-4c4d2c55dbfb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="Picture of a lamp">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+            laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
-      </a>    
+        </a>    
       </div> 
       <div class="grid-child seven">
         <a href="#">
           <h3>NEWS</h3>
           <h6>Posted: August 24th, 2020</h6>
-            <div class="box spc">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-              laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-              laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-              laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam. </p>
-              <img class="img-smallest" src="https://images.unsplash.com/photo-1523976888287-7454b4df44f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Picture of cups">
-           </div>
-          </a>    
-        </div> 
-        <div class="grid-child eight">
-          <a href="#">
-            <h3>WHAT'S NEXT?</h3>
-            <h6>Posted: August 25th, 2020</h6>
-              <p>Don't forget next week's update! Then we will introduce you to all new autumn trends!</p>
-          </a>    
-          </div> 
+          <div class="box spc">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+            laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+            laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+            laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam. </p>
+            <img class="img-smallest" src="https://images.unsplash.com/photo-1523976888287-7454b4df44f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Picture of cups">
+          </div>
+        </a>    
+      </div> 
+      <div class="grid-child eight">
+        <a href="#">
+          <h3>WHAT'S NEXT?</h3>
+          <h6>Posted: August 25th, 2020</h6>
+          <p>Don't forget next week's update! Then we will introduce you to all new autumn trends!</p>
+        </a>    
+      </div> 
     </section>
 
     <footer>
