edit mobile and tablet

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,90 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" media="all" href="./style.css" type="text/css"/>
+   
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <h1>Wedding Weekly &#127882</h1>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <nav>
+        <a href="home">Home</a>
+        <a href="news">News</a>
+        <a href="about-us">About Us</a>
+        <a href="contact">Contact</a>
+      </nav>
     </header>
+  
+      <div class="main">
+        <img id="mainphoto" src="./Images/coronawedding.jpg">
+        <h2>How to plan a wedding during a world pandemic?</h2>
+        <p>There’s a lot to think about when planning your big day—no matter where your wedding date falls on the calendar. But if it happens to be in the midst of the coronavirus crisis, you might be wondering what you should do—if anything—to prepare and plan for the potential that your wedding may be affected.
+        <br>
+        <br>
+        <a href="https://www.brides.com/what-to-know-about-coronavirus-and-wedding-planning-4799160">Read more...</a></p> 
+        <hr>
+      </div>
+        <hr>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <section class="cards">
+    <div class="card">
+      <img src="./Images/venue.jpg">
+        <h3>Find the perfect venue</h3>
+        <a href="#">Read more...</a>
+    </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <div class="card">
+      <img src="./Images/flowers.jpg">
+        <h3>Wedding flowers for under 100$</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./Images/budget.png">
+        <h3>It doesn't have to be expensive</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./Images/dresses.jpg">
+        <h3>Wedding dress silhouettes</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./images/cake.png">
+        <h3>Ten inspirational wedding cakes</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./images/guidelines.png">
+        <h3>Guest guidelines</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./images/drink.jpg">
+        <h3>Open bar or not?</h3>
+        <a href="#">Read more...</a>
+    </div>
+
+    <div class="card">
+      <img src="./images/celeb.jpg">
+        <h3>Celebrity weddings 2020</h3>
+        <a href="#">Read more...</a>
+    </div>
+  </section>
+
+    <footer>
+      <p>Wedding Weekly. August 2020.</p>
+    </footer>
   </body>
 </html>
