fixed the order in the header so it looks like it should for tablet

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,12 @@
 
      <!-- Some kind of logo and navbar in the header -->
     <header>
-      <img src="HealthyHackLogo.gif" alt="HealthHackLogo">
-      <h1>HEALTH HACK</h1>
-          <a href="#home">Home</a>
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
-  
+        <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
+        <h1>HEALTH HACK</h1>
+          <a href="#home" class="linkleft">Home</a>
+          <a href="#news" class="linkleft">News</a>
+          <a href="#contact" class="linkright">Contact</a>
+          <a href="#about" class="linkright">About</a>
     </header>
       
     <section class="big-news">
