got the hover effects working

--- a/code/index.html
+++ b/code/index.html
@@ -47,20 +47,26 @@
       <section class="plant-containers">
 
         <div class="card">
-          <img src="./monstera.jpg" alt="monstera">
-          <p> Monstera. With it's big and lovely leaves it can make any room
+          <div class="img-container">
+            <img src="./monstera.jpg" alt="monstera">
+            <h4>Monstera</h4>
+          </div>  
+          <p> With it's big and lovely leaves it can make any room
              feel like a small jungle
              Thrives in bright to medium indirect light. Water weekly but let it dry out before watering. </p>
         </div>
+      
 
         <div class="card">
-          <img src="./pictures/elefantear.jpg" alt="elefantear">
-          <p> This pancake plant wants the soil to dry between waterings. 
+          <div class="img-container">
+            <img src="./pictures/elefantear.jpg" alt="elefantear">
+            <h4>Pancake plant</h4>
+            </div>
+           <p> This pancake plant wants the soil to dry between waterings. 
             Watch the leaves—when they start looking a tad droopy, it's time to water your plant. 
             In warmer weather, 
             they need to be watered more frequently.
-            Is also called "chinese money plant". According to old chinese 
-            
+            Is also called "chinese money plant". According to old chinese folklore money grew in the
             "Chinese money plant" då man enligt gammal kinesisk folktro 
             blir rik om man lägger ett mynt i jorden med växten. 
             Den kallas även "pancake plant" och "missionary plant"
@@ -68,19 +74,28 @@
         </div>
 
         <div class="card">
-          <img src="./pictures/fikus.jpg" alt="fikus">
-          <p> Ficus Elastica or Rubber Tree
-             </p>
+          <div class="img-container">
+            <img src="./pictures/fikus.jpg" alt="fikus">
+            <h4>Ficus Elastica</h4>
+          </div>
+            <p> Ficus Elastica or Rubber Tree
+            </p>
         </div>
 
         <div class="card">
-          <img src="./pictures/forellbegonia.jpg" alt="forellbegonia">
+          <div class="img-container">
+            <img src="./pictures/forellbegonia.jpg" alt="forellbegonia">
+            <h4>Polkadot begonia</h4>
+            </div>
           <p>Begonia maculata or Polkadot Begonia. 
           </p>
         </div>
 
         <div class="card">
-          <img src="./pictures/fredskalla.jpg" alt="fredskalla">
+          <div class="img-container">
+            <img src="./pictures/fredskalla.jpg" alt="fredskalla">
+            <h4>Peace lily</h4>
+            </div>
           <p>Fredskalla är en art i familjen kallaväxter från Colombia. 
             Arten är en vanlig krukväxt i Sverige och tämligen lättskött. Den ska inte stå i direkt solljus, utan trivs bättre i skuggigare lägen.
             Då arten är en sumpväxt ska jorden hållas fuktig.
@@ -88,7 +103,10 @@
         </div>
 
         <div class="card">
-          <img src="./pictures/garderobsblomma.jpg" alt="garderobsblomma">
+          <div class="img-container">
+            <img src="./pictures/garderobsblomma.jpg" alt="garderobsblomma">
+            <h4>Zamioculcas</h4>
+            </div>
           <p> Zamioculcas
             The plant has air purifying qualities for the indoor environment.
 
@@ -96,7 +114,10 @@
         </div>
 
         <div class="card">
-          <img src="./pictures/gullranka.jpg" alt="gullranka">
+          <div class="img-container">
+            <img src="./pictures/gullranka.jpg" alt="gullranka">
+            <h4>Pothos</h4>
+          </div>
           <p> Pothos plant.They do well in bright indirect light as well as low light and can be grown
             in dry soil or in vases of water. 
             They will thrive in nutrient rich soil, but do almost as well in nutrient poor soil. 
@@ -106,7 +127,10 @@
         </div>
 
         <div class="card">
-          <img src="./pictures/hajfena.jpg" alt="hajfena">
+          <div class="img-container">
+            <img src="./pictures/hajfena.jpg" alt="hajfena">
+            <h4>Shark fin <br>snake plant</h4>
+          </div>
           <p> shark fin snake plant
 
           </p>
