adjusted the fit of the card images by adding object fit and a height to the css. Added a box shadow to the big news-container. Removed unnecessary code in css-file.

--- a/code/index.html
+++ b/code/index.html
@@ -42,15 +42,14 @@
   <section class="card-container">
     <div class="headline-text">
       <h3>ARTICLES</h3>
-      <p>Get inspired</p>
+      <p>Get inspired!</p>
     </div>
     <section class="cards">
       <a href="#">
         <img class="card-image" src="./images/bowl.jpg" alt="image of a acai bowl">
         <div class="card-text">
           <h4>HOW TO MAKE YOUR OWN ACAI BOWL</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. </p>
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         </div>
       </a>
       <a href="#">
@@ -64,16 +63,14 @@
         <img class="card-image" src="./images/bread.jpeg" alt="image of someone baking bread">
         <div class="card-text">
           <h4>THE SCIENCE OF BREADMAKING</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.</p>
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </a>
       <a href="#">
         <img class="card-image" src="./images/brunch.jpeg" alt="image of a set table">
         <div class="card-text">
           <h4>EASY BRUNCH RECIPES</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
           </p>
         </div>
       </a>
@@ -81,24 +78,21 @@
         <img class="card-image" src="./images/spices.jpeg" alt="image of spoons with spices">
         <div class="card-text">
           <h4>SPICE UP YOUR LIFE!</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.Lorem Ipsum dolor sit amet.</p>
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem Ipsum dolor sit amet.</p>
         </div>
       </a>
       <a href="#">
         <img class="card-image" src="./images/pasta.jpeg" alt="image of a plate with pasta">
         <div class="card-text">
           <h4>10 VEGETARIAN PASTA RECIPES</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.</p>
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </a>
       <a href="#">
         <img class="card-image" src="./images/dessert.jpeg" alt="image of dessert">
         <div class="card-text">
           <h4>EASY VEGAN DESSERTS</h4>
-          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.Lorem Ipsum dolor sit amet.</p>
+          <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem Ipsum dolor sit amet.</p>
         </div>
       </a>
       <a href="#">
