Update article links

--- a/code/index.html
+++ b/code/index.html
@@ -53,53 +53,67 @@
     <h2>// read more articles</h2>
 
     <section class="other-news">
-      <article style="background-image: url(./img/bobbibrown.jpg);">
+      <article style="background-image: url(./img/bobbibrown.jpg);"> 
+        <a href='http://www.scandinavianaffair.se/2017/05/09/skin-perfection-by-bobbi-brown/'>
         <div class="background-mask">
           <h3>Skin Foundation</h3>
           <p>Perfection in a bottle, glowy & natural!</p>
         </div>
+      </a>
       </article>
 
       <article style="background-image: url(./img/summeressentials.jpg);">
+        <a href='http://www.scandinavianaffair.se/2016/07/27/summer-skin-essentials/'>
         <div class="background-mask">
           <h3>Skin Summer Essentials</h3>
           <p>For those hot days</p>
         </div>
+      </a>
       </article>
 
       <article style="background-image: url(./img/ceramidin.jpg);">
+        <a href='http://www.scandinavianaffair.se/2018/10/28/skin-hero-dr-jart-ceramidin-liquid/'>
         <div class="background-mask">
           <h3>Ceramidin</h3>
           <p>Skin Hero!</p>
         </div>
+      </a>
       </article>
 
       <article style="background-image: url(./img/chanelcc.jpg);">
+        <a href='http://www.scandinavianaffair.se/2016/07/20/the-5-product-face/'>
         <div class="background-mask">
           <h3>CC Cream SPF 50</h3>
           <p>Coverage without comprimising sun protection</p>
+        </a>
         </div>
       </article>
 
       <article style="background-image: url(./img/fiveproduct.jpg);">
+        <a href='http://www.scandinavianaffair.se/2016/07/20/the-5-product-face/'>
         <div class="background-mask">
           <h3>The 5 product Face</h3>
           <p>Easy peasy lemon squeazy!</p>
+        </a>
         </div>
       </article>
 
       <article style="background-image: url(./img/inflightskin.jpg);">
+        <a href='http://www.scandinavianaffair.se/2016/08/01/in-flight-skin-saviours/'>
         <div class="background-mask">
           <h3>The in-flight Skin Saviours</h3>
           <p>For those long haul flights</p>
         </div>
+        </a>
       </article>
 
       <article style="background-image: url(./img/luna.jpg);">
+        <a href='http://www.scandinavianaffair.se/2016/08/01/in-flight-skin-saviours/'>
         <div class="background-mask">
           <h3>The Luna</h3>
           <p>Taking retinol to the next level</p>
         </div>
+      </a>
       </article>
     </section>
 
